# ether_particle_simulator

./: Cargo.toml  run.sh
config/: 12k.toml  200k_dense.toml  48k.toml  example.toml  sphere.toml  sphere_wake.toml  vortex_cannon.toml
crates/physics-core/: Cargo.toml
crates/physics-core/src/: grid.rs  lib.rs
crates/physics-sim/: Cargo.toml
crates/physics-sim/src/: main.rs
crates/physics-viewer/: Cargo.toml
crates/physics-viewer/src/: camera.rs  main.rs  renderer.rs  shader.wgsl
