[package]
name = "physics-viewer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
physics-core = { path = "../physics-core" }
glam = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
glyphon = "0.6"
